--- a/python-deploy.yaml
+++ b/python-deploy.yaml
@@ -16,7 +16,7 @@ spec:
     spec: 
       containers: 
       - name: python-container-app
-        image: iamsauravsingh/python-app:latest
+        image: harsha102826/python-app:latest
         ports: 
         - containerPort: 5000
           name: app-port
